# CTGents

./: .env.example  .gitignore  .pre-commit-config.yaml  .read_cache.json  .scan_cache.json  AGENTS.md  CLAUDE.md  Makefile  README.md  coverage.json  coverage_summary.txt  passwd.md  pyproject.toml  requirements.txt
.rag-index/: hashes.json  index.json  meta.json  research.json
agent/: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  FEATURES.md  LICENSE  Makefile  README.md  ROADMAP.md  agent.py  config.py  learn_skill.md  pyproject.toml  requirements.txt  run.py  session.py  test123.txt  tools.py
agent/.github/workflows/: ci.yml
agent/docs/: architecture.md  cache-design.md  changelog.md  contributing.md  development.md  roadmap.md
agent/memory/: MEMORY.md  ai-agent-dev-standards-six-dimensions.md  dev-workflow-docs-must-sync.md  user-grade.md  user-major-direction.md  user-prefers-flexible-judgment.md  user-prefers-token-efficiency.md
agent/plugins/: agent_skills.py
agent/skills/colleague-skill/: SKILL.md
agent/skills/distill-methodology/: SKILL.md
agent/skills/expression-workshop/: SKILL.md
agent/skills/markdown-report/: SKILL.md
agent/skills/nvwa-skill/: SKILL.md
agent/skills/product-compass/: SKILL.md
agent/skills/skill-loader/: SKILL.md
agent/skills/sunxiaochuan-skill/: SKILL.md
agent/src/: commands.py  config.py  llm.py  main.py  safety.py  session.py  skill_ctx.py  tools.py
agent/src/tools/: __init__.py  code.py  discover.py  exec.py  file.py  git.py  lint.py  memory.py  plugin_mgr.py  project.py  skill.py  think.py  tokens.py  web.py
agent/tests/: conftest.py  test_cache.py  test_exec.py  test_lint.py  test_safety.py
dashboard/: README.md  __init__.py  collectors.py  index.html  server.py
docs/: architecture.md  cache-design.md  changelog.md  development.md  module_sizes.md  roadmap.md  skills.md
knowledge/trajectory-prediction/: ARCHITECTURE.md  INDEX.md  KNOWLEDGE_INDEX.md  TAXONOMY.md
knowledge/trajectory-prediction/ideas/: README.md  interaction-difficulty-aware-training.md  pata-progressive-temporal-anchors.md  scene-adaptive-aux-weighting.md  temporal-consistency-loss.md
knowledge/trajectory-prediction/meta/: auxiliary-task-map.md  cross-domain-ideas.md  dead-ends.md  deep-dive-progressive-temporal.md  evolution-log.md  gaps.md  problem-map-report.md  research-assistant-mode.md
knowledge/trajectory-prediction/papers/: 2020-lane-heading-loss.md  2020-trajectron++.md  2022-hivt.md  2022-m2i.md  2023-adapt.md  2024-cctr.md  2024-lakd.md  2024-ppt.md  2024-ssl-interactions.md  2024-trajclip.md  2024-unitraj.md  2025-perreg.md  (+5 more)
memory/: MEMORY.md  agent-tool-usage-efficiency.md  ai-agent-dev-standards-six-dimensions.md  aux-coordinate-system-alignment.md  aux-destination-head-defense.md  auxiliary-task-map-built.md  cache-optimization-protocol.md  correction-and-disagreement-protocol.md  goal-command-design.md  layered-memory-system.md  no-tool-stats-at-end.md  research-architecture-three-layer.md  research-assistant-mode.md  research-tool-chain-evolution.md  session-start-checklist.md  test-sync-rule.md  token-efficiency-principle.md  user-grade.md  user-major-direction.md  user-nickname.md  user-preferences.md  user-prefers-adaptive-verbosity.md  user-prefers-efficient-execution.md  user-prefers-execution-efficiency.md  user-prefers-minimal-output.md  user-prefers-no-more-questions.md  user-prefers-no-redundant-reads.md  user-prefers-plan-first.md  user-research-focus-trajectory-prediction.md
scripts/: install_hooks.py
scripts/git-hooks/: pre-commit
src/: autonomic.py  cache_context.py  citation_audit.py  commands.py  completion_audit.py  config.py  coverage_gate.py  diagnostics.py  evolution_loop.py  evolution_runner.py  evolve.py  gaps.py  gate_audit.py  goal.py  guard.py  lesson.py  llm.py  main.py  outcome.py  params.py  safety.py  self_portrait.py  session.py  session_pins.py  session_summary.py  suggest.py  task_loop.py  tasks.py  tracker.py  validate.py  watchdog.py
src/tools/: __init__.py  _tool_meta.py  analyzer.py  analyzer_tool.py  code.py  discover.py  evolve.py  exec.py  file.py  git.py  learn.py  lint.py  mcp.py  memory.py  paper.py  pin.py  plugin_mgr.py  project.py  rag.py  reflect.py  repo.py  research.py  self.py  storm.py  subagent.py  think.py  tokens.py  tool_guard.py  tracker.py  web.py
tasks/: ambitions.md  current.md
tasks/archive/: 2026-06-05-evolution-runner.md  2026-06-05-fix-agent-safety-lint.md  2026-06-05-remove-evolution-loop.md  2026-06-08-ad-deep-scan.md  2026-06-08-ad-exploration.md  2026-06-08-ad-full-scan.md  2026-06-08-broad-sweep.md  2026-06-08-final-sweep.md  2026-06-08-master-scoring.md  2026-06-09-citation-audit.md  2026-06-09-completion-audit.md  2026-06-09-integration-net.md  2026-06-09-passive-evolution.md  2026-06-09-plan-mode-sticky.md  2026-06-09-process-turn-authoritative.md  2026-06-09-recall-ranking.md  2026-06-09-remove-autoplan-length.md  2026-06-09-remove-plan-mode.md  2026-06-09-session-pinboard.md  2026-06-10-rule-layer-adaptation.md  2026-06-10-thinking-stance-tail.md  2026-06-10-审查修复-断线-熔断-压缩-token.md  2026-06-10-自我进化-研究-移植.md  2026-06-11-stormbreaker-compact.md  2026-06-11-任务闭环-outcome-loop.md  2026-06-11-操守根因修复-三层移植.md  2026-06-11-断言级取证-标识符审计.md  2026-06-12-eager-execution.md
tests/: __init__.py  analyze_cache_hitrate.py  conftest.py  test_analyzer.py  test_analyzer_tool.py  test_cache.py  test_cache_context.py  test_citation_audit.py  test_cleanup_threshold.py  test_code.py  test_commands.py  test_completion_audit.py  test_config.py  test_coverage_gate.py  test_diagnostics.py  test_evolution_loop.py  test_evolution_runner.py  test_evolution_scope.py  test_evolve.py  test_exec.py  test_file.py  test_finalize.py  test_gaps.py  test_gate_audit.py  test_git_status.py  test_goal.py  test_guard.py  test_install_hooks.py  test_integration.py  test_integration_turn.py  test_invariants.py  test_lesson.py  test_lint.py  test_llm.py  test_main.py  test_memory.py  test_memory_signal.py  test_outcome.py  test_params.py  test_plan_mode.py  (+24 more)
(+16 files in other folders)
