[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "ctg"
version = "0.1.0"
requires-python = ">=3.11"

[project.scripts]
ctg = "src.main:main"

[tool.setuptools.packages.find]
include = ["src*"]

# ── Ruff: 一站式 linter + formatter ──
[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = [
    "E", "W",     # pycodestyle
    "F",           # Pyflakes
    "I",           # isort
    "N",           # pep8-naming
    "D",           # pydocstyle
    "UP",          # pyupgrade
    "B",           # flake8-bugbear
    "SIM",         # flake8-simplify
    "C4",          # flake8-comprehensions
]
ignore = [
    "D100",   # 不强制模块级 docstring
    "D101",   # 不强制 public class docstring
    "D102",   # 不强制 public method docstring
    "D103",   # 不强制 public function docstring
    "D104",   # 不强制包级 docstring
    "D105",   # 不强制 magic method docstring
    "D107",   # 不强制 __init__ 的 docstring
    "D203",   # 与 D211 冲突，显式忽略
    "D212",   # 与 D213 冲突，显式忽略
    "D213",   # 与 D212 冲突，显式忽略
    "D205",   # 中文 docstring 摘要与正文之间无空行
    "D400",   # 中文 docstring 以"。"结尾，不强制英文句号
    "D413",   # Returns 段落后缺少空行（中文风格）
    "D415",   # 中文 docstring 以"。"结尾，不强制英文句号
    "RUF001", # 中文项目允许全角标点在字符串中
    "RUF002", # 中文项目允许全角标点在 docstring 中
    "RUF003", # 中文项目允许全角标点在注释中
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["D103"]
# 线性诊断脚本（pytest 忽略）：中途 import、长 mock 数据是脚本固有风格，非测试代码
"tests/analyze_cache_hitrate.py" = ["E402", "E501", "B905"]
"run.py" = ["D100", "D103"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

# ── pytest: 测试配置 ──
[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short -p no:cacheprovider --ignore=tests/test_prefix_cache.py --ignore=tests/analyze_cache_hitrate.py"
markers = [
    "slow: 速度较慢的测试（依赖安装等）",
]
